# dim

./: .gitignore  README.md  dim.service  requirements.txt  setup.cfg  setup.py
dim/: common.py  display.py  monitor.py
