[metadata]
name = dim
summary = Docker Image Monitor
description-file =
    README.md
author = Shay Arbov
author-email = shay.arbov@stratoscale.com
home-page = http://github.com/stratoscale/dim.git
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7


[bdist_rpm]
release = 1
packager = stratoscale@stratoscale.com
doc_files = README.rst
no_autoreq = true
build_requires = python2-devel

[files]
packages =
    dim
data_files =
    share/dim/etc = etc/*
    /usr/lib/systemd/system = dim.service

[entry_points]
console_scripts =
    dim-monitor = dim.monitor:main
    dim-display = dim.display:main

[flake8]
ignore = E501,E123,T002,E402
max-line-length=145
jobs=auto
